[package]
publish = false #TODO: Remove when ready
name = "mfer"
version = "0.1.0"
edition = "2021"
authors = ["Yuugen"]
description = "A modular game engine specialized in fighting games."
keywords = ["game", "engine", "wasm"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.10.0"
log = "0.4.17"
wgpu = "0.15.1"
winit = "0.28.3"
